--- a/index.html
+++ b/index.html
@@ -4,295 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>★☆ MINHA TIER LIST ☆★</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Courier+New&display=swap');
+  <title>★☆ PUGO TIER LIST ☆★</title>
+  <link rel="stylesheet" href="estilo.css">
 
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Orbitron', 'Courier New', monospace;
-      margin: 0;
-      padding: 0;
-
-      background-image:
-        url('imagens/How-to-Draw-a-Pug.jpg'),
-        linear-gradient(45deg, #ff00ff, #00ffff, #ffff00, #ff0080);
-      /* linear-gradient(45deg, #ff9a9e, #fad0c4, #fad0c4); */
-      /* linear-gradient(45deg, #0ff0fc, #ff00c8, #ffea00); */
-      /* linear-gradient(45deg, #ff6ec4, #7873f5); */
-
-      background-size:
-        150px 150px,
-        /* imagem do pug */
-        400% 400%;
-      /* gradiente animado */
-
-      background-repeat:
-        repeat,
-        /* imagem se repete */
-        no-repeat;
-      /* gradiente não se repete */
-
-      background-blend-mode: overlay;
-      /* ou 'multiply', 'soft-light', etc. */
-
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      overflow-x: auto;
-
-      animation: gradientShift 8s ease infinite;
-    }
-
-    /* Animação do gradiente */
-    @keyframes gradientShift {
-      0% {
-        background-position: 0 0, 0 0;
-      }
-
-      50% {
-        background-position: 0 0, 100% 100%;
-      }
-
-      100% {
-        background-position: 0 0, 0 0;
-      }
-    }
-
-    h1 {
-      color: #ffffff;
-      text-shadow: 0 0 10px #ff00ff, 0 0 20px #00ffff, 0 0 30px #ffff00;
-      font-size: 2.5em;
-      font-weight: 900;
-      margin: 20px 0;
-      text-align: center;
-      letter-spacing: 3px;
-      animation: textGlow 2s ease-in-out infinite alternate;
-      text-transform: uppercase;
-    }
-
-    @keyframes textGlow {
-      from {
-        text-shadow: 0 0 10px #ff00ff, 0 0 20px #00ffff, 0 0 30px #ffff00;
-      }
-
-      to {
-        text-shadow: 0 0 20px #ff00ff, 0 0 30px #00ffff, 0 0 40px #ffff00;
-      }
-    }
-
-    .tier-container {
-      width: 100%;
-      max-width: 1200px;
-      margin: 20px;
-      background: rgba(0, 0, 0, 0.8);
-      border: 3px solid #00ffff;
-      border-radius: 15px;
-      padding: 20px;
-      box-shadow: 0 0 20px #ff00ff, inset 0 0 20px rgba(255, 255, 255, 0.1);
-    }
-
-    .tier-row {
-      display: flex;
-      align-items: center;
-      min-height: 100px;
-      margin-bottom: 8px;
-      border: 2px solid #ffff00;
-      border-radius: 10px;
-      padding: 8px;
-      background: linear-gradient(90deg, rgba(255, 0, 255, 0.3), rgba(0, 255, 255, 0.3));
-      box-shadow: 0 0 15px rgba(255, 255, 0, 0.5);
-      transition: all 0.3s ease;
-    }
-
-    .tier-row:hover {
-      transform: scale(1.02);
-      box-shadow: 0 0 25px rgba(255, 255, 0, 0.8);
-    }
-
-    .tier-label {
-      width: 180px;
-      font-weight: 900;
-      padding: 10px;
-      text-align: center;
-      background: linear-gradient(45deg, #ff00ff, #00ffff);
-      background-clip: text;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      font-size: 1.2em;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-      border-right: 2px solid #ffff00;
-      letter-spacing: 2px;
-    }
-
-    .drop-zone {
-      flex-grow: 1;
-      display: flex;
-      gap: 15px;
-      flex-wrap: wrap;
-      min-height: 80px;
-      background: radial-gradient(circle, rgba(0, 0, 0, 0.7), rgba(255, 255, 255, 0.1));
-      padding: 10px;
-      border-radius: 8px;
-      border: 2px dashed #00ffff;
-      transition: all 0.3s ease;
-    }
-
-    .drop-zone:hover {
-      border-color: #ff00ff;
-      background: radial-gradient(circle, rgba(255, 0, 255, 0.2), rgba(0, 255, 255, 0.2));
-    }
-
-    .image-grid {
-      margin: 30px 20px;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 15px;
-      justify-content: center;
-      background: rgba(0, 0, 0, 0.8);
-      border: 3px solid #ff00ff;
-      border-radius: 15px;
-      padding: 25px;
-      box-shadow: 0 0 20px #00ffff;
-      max-width: 1200px;
-    }
-
-    .tier-img {
-      width: 80px;
-      height: 80px;
-      object-fit: cover;
-      border: 3px solid #ffff00;
-      border-radius: 10px;
-      cursor: grab;
-      transition: all 0.3s ease;
-      box-shadow: 0 0 10px rgba(255, 255, 0, 0.5);
-      filter: brightness(1.1) contrast(1.2);
-    }
-
-    .tier-img:hover {
-      transform: scale(1.1) rotate(2deg);
-      border-color: #ff00ff;
-      box-shadow: 0 0 20px rgba(255, 0, 255, 0.8);
-      filter: brightness(1.3) contrast(1.4) saturate(1.3);
-    }
-
-    .tier-img:active {
-      cursor: grabbing;
-      transform: scale(0.95);
-    }
-
-    /* Efeito especial para cada tier */
-    .tier-row:nth-child(1) .tier-label {
-      background: linear-gradient(45deg, #ff0000, #ffff00);
-      background-clip: text;
-      -webkit-background-clip: text;
-      animation: eliteGlow 1.5s ease-in-out infinite alternate;
-    }
-
-    @keyframes eliteGlow {
-      from {
-        filter: brightness(1);
-      }
-
-      to {
-        filter: brightness(1.5);
-      }
-    }
-
-    .tier-row:nth-child(2) .tier-label {
-      background: linear-gradient(45deg, #00ff00, #00ffff);
-      background-clip: text;
-      -webkit-background-clip: text;
-    }
-
-    .tier-row:nth-child(3) .tier-label {
-      background: linear-gradient(45deg, #0080ff, #8000ff);
-      background-clip: text;
-      -webkit-background-clip: text;
-    }
-
-    .tier-row:nth-child(4) .tier-label {
-      background: linear-gradient(45deg, #ff8000, #ff0080);
-      background-clip: text;
-      -webkit-background-clip: text;
-    }
-
-    .tier-row:nth-child(5) .tier-label {
-      background: linear-gradient(45deg, #800000, #400040);
-      background-clip: text;
-      -webkit-background-clip: text;
-    }
-
-    /* Scrollbar customizada */
-    ::-webkit-scrollbar {
-      width: 12px;
-    }
-
-    ::-webkit-scrollbar-track {
-      background: linear-gradient(90deg, #ff00ff, #00ffff);
-    }
-
-    ::-webkit-scrollbar-thumb {
-      background: linear-gradient(90deg, #ffff00, #ff0080);
-      border-radius: 6px;
-    }
-
-    ::-webkit-scrollbar-thumb:hover {
-      background: linear-gradient(90deg, #ff0080, #ffff00);
-    }
-
-    /* Efeitos de partículas */
-    .particle {
-      position: fixed;
-      width: 4px;
-      height: 4px;
-      background: #ffff00;
-      border-radius: 50%;
-      pointer-events: none;
-      animation: float 4s linear infinite;
-      z-index: -1;
-    }
-
-    @keyframes float {
-      0% {
-        transform: translateY(100vh) rotate(0deg);
-        opacity: 1;
-      }
-
-      100% {
-        transform: translateY(-10px) rotate(360deg);
-        opacity: 0;
-      }
-    }
-
-    /* Responsividade */
-    @media (max-width: 768px) {
-
-      .tier-container,
-      .image-grid {
-        margin: 10px;
-        padding: 15px;
-      }
-
-      .tier-label {
-        width: 120px;
-        font-size: 1em;
-      }
-
-      .tier-img {
-        width: 60px;
-        height: 60px;
-      }
-
-      h1 {
-        font-size: 1.8em;
-      }
-    }
-  </style>
 </head>
 
 <body>
@@ -396,6 +110,7 @@
     function addDragListeners(element) {
       element.addEventListener('dragstart', handleDragStart);
       element.addEventListener('dragend', handleDragEnd);
+      addContextMenu(element); // Adicione esta linha
     }
 
     // Adicionar event listeners para elementos existentes
@@ -459,7 +174,54 @@
 
     // Chama a função quando a página carregar
     window.addEventListener('load', loadImages);
+    // Função para abrir modal da imagem
+    function openImageModal(imageSrc) {
+      const modal = document.getElementById('imageModal');
+      const modalImg = document.getElementById('modalImage');
+      modal.style.display = 'block';
+      modalImg.src = imageSrc;
+      document.body.style.overflow = 'hidden'; // Previne scroll
+    }
+
+    // Função para fechar modal
+    function closeImageModal() {
+      const modal = document.getElementById('imageModal');
+      modal.style.display = 'none';
+      document.body.style.overflow = 'auto'; // Restaura scroll
+    }
+
+    // Adicionar evento de clique direito para todas as imagens
+    function addContextMenu(img) {
+      img.addEventListener('contextmenu', (e) => {
+        e.preventDefault(); // Previne menu padrão do navegador
+        openImageModal(img.src);
+      });
+    }
+
+    // Aplicar para imagens existentes
+    document.querySelectorAll('.tier-img').forEach(addContextMenu);
+
+    // Fechar modal ao clicar fora da imagem
+    document.getElementById('imageModal').addEventListener('click', (e) => {
+      if (e.target.classList.contains('image-modal')) {
+        closeImageModal();
+      }
+    });
+
+    // Fechar modal com tecla ESC
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'Escape') {
+        closeImageModal();
+      }
+    });
   </script>
+  <!-- Modal para visualizar imagem -->
+  <div id="imageModal" class="image-modal">
+    <div class="modal-content">
+      <button class="close-modal" onclick="closeImageModal()">&times;</button>
+      <img id="modalImage" class="modal-image" src="" alt="Imagem expandida">
+    </div>
+  </div>
 </body>
 
 </html>
