--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <div class="tier-container">
     <div class="tier-row">
-      <div class="tier-label">ABSOLUTE ELITE</div>
+      <div class="tier-label">INSANO</div>
       <div class="drop-zone" data-tier="elite"></div>
     </div>
     <div class="tier-row">
@@ -96,7 +96,7 @@
     function addDragListeners(element) {
       element.addEventListener('dragstart', handleDragStart);
       element.addEventListener('dragend', handleDragEnd);
-      addContextMenu(element); 
+      addContextMenu(element);
     }
 
     draggables.forEach(addDragListeners);
