direto no html flex shring

--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
 
   <div class="tier-container">
     <div class="tier-row">
-      <div class="tier-label">INSANO</div>
+      <div class="tier-label" style="flex-shrink: 0">INSANO</div>
       <div class="drop-zone" data-tier="elite"></div>
     </div>
     <div class="tier-row">
-      <div class="tier-label">MASSA</div>
+      <div class="tier-label" style="flex-shrink: 0">MASSA</div>
       <div class="drop-zone" data-tier="massa"></div>
     </div>
     <div class="tier-row">
-      <div class="tier-label">LEGAL</div>
+      <div class="tier-label" style="flex-shrink: 0">LEGAL</div>
       <div class="drop-zone" data-tier="legal"></div>
     </div>
     <div class="tier-row">
-      <div class="tier-label">PAIA</div>
+      <div class="tier-label" style="flex-shrink: 0">PAIA</div>
       <div class="drop-zone" data-tier="paia"></div>
     </div>
     <div class="tier-row">
-      <div class="tier-label">BUCHA</div>
+      <div class="tier-label" style="flex-shrink: 0">BUCHA</div>
       <div class="drop-zone" data-tier="bucha"></div>
     </div>
   </div>
