mudando o import aqui

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <script src="js/mover-tier.js"></script>
   <script src="js/imagens.js"></script>
   <script src="js/tierlist-io.js"></script>
-  <script src="js/drag_drop_json.js"></script>
+  <script src="js/solte_aqui.js"></script>
   <div id="imageModal" class="image-modal">
     <div class="modal-content-pai">
       <button class="close-modal" onclick="fecharModalImagem()">&times;</button>
