--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
   <script src="js/imagens.js"></script>
   <script src="js/tierlist-io.js"></script>
   <script src="js/solte_aqui.js"></script>
+  <script src="js/tierlist-io.js"></script>
   <div id="imageModal" class="image-modal">
     <div class="modal-content-pai">
       <button class="close-modal" onclick="fecharModalImagem()">&times;</button>
