ajusta paddind top

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <h1>★☆ PUGO TIER LIST ☆★</h1>
+  <h1 style="padding-top: 20px;">★☆ PUGO TIER LIST ☆★</h1>
   <div class="tier-selector-container">
     <label for="tier-select" class="tier-selector-label">Selecionar Tier List:</label>
     <select id="tier-select" class="tier-selector" onchange="alterarTierList()">
