add footer na branch errada

--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
     <button class="btn-neon-rosa" type="button">PAIA</button>
     <button class="btn-neon-ciano" type="button">BUCHA</button>
   </div>
-
+  <footer class="footer">
+    <strong>InuSoftware</strong>
+  </footer>
 </body>
 <script src="js/particulas.js"></script>
 <script src="js/dragdrop.js"></script>
